# ThisDay

./: .gitignore  CMakeLists.txt  Main.qml  README.md  Temp.qml  main.cpp  qmldir  resources.rc
qml/components/: DailyForecastItem.qml  DailyForecastView.qml  DetectLocationButton.qml  HourlyForecastItem.qml  HourlyForecastView.qml  OverallWeatherSummaryCard.qml  Searchbar.qml  Shimmer.qml  Sidebar.qml  SidebarButton.qml  SidebarHamburgerToggle.qml  SidebarStatItem.qml  SidebarToggle.qml  ThemeSwitch.qml  Toolbar.qml  WeatherCard.qml  WeatherDetailsCard.qml  WeatherDetailsItem.qml  WeatherStatItem.qml  qmldir
qml/pages/: TodayPage.qml
qml/shared/: Clock.qml  Directory.qml  LocationData.qml  Theme.qml  WeatherData.qml  qmldir
qml/shared/utils/: DataConverter.js  DataPrettier.js
src/common/builders/: WeatherSummaryBuilder.cpp  WeatherSummaryBuilder.h
src/common/constants/: WeatherStandardReferenceUnits.h
src/common/formatters/: WeatherDomainFormatter.cpp  WeatherDomainFormatter.h  WeatherFormatter.cpp  WeatherFormatter.h
src/common/mappers/: WeatherEnumMapper.cpp  WeatherEnumMapper.h  WeatherMapper.cpp  WeatherMapper.h  WeatherSemanticMapper.cpp  WeatherSemanticMapper.h
src/common/types/: SettingsTypes.h  WeatherDataTypes.h  WeatherModelTypes.h  WeatherPresentationSettings.h  WeatherTypes.h  WeatherUnits.h
src/config/: SecretConfig.h.example
src/core/: WeatherModel.cpp  WeatherModel.h
src/network/: LocationProvider.cpp  LocationProvider.h  WeatherProvider.cpp  WeatherProvider.h
src/settings/: DefaultSettings.h  SettingsManager.cpp  SettingsManager.h
src/utils/: WeatherCalculator.cpp  WeatherCalculator.h  WeatherParser.cpp  WeatherParser.h  WeatherTimeUtils.cpp  WeatherTimeUtils.h
